Add testsrun & push

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,10 @@ sudo: required
 services:
   - docker
 script:
-- ./build versions/edge/options
+  - ./build versions/edge/options
+after_success:
+  - ./build test versions/edge/options
+deploy:  
+  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - ./build push versions/edge/options
+  
